--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "allowJs": true,
+    "checkJs": true,
     "exactOptionalPropertyTypes": true,
     "lib": ["esnext"],
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
+    "module": "preserve",
     "noEmit": true,
-    "strict": true
+    "strict": true,
+    "target": "ESNext",
   }
 }
